# qmat

./: .gitignore  Cargo.toml  README.md  benches.md
.github/workflows/: coverage.yml
benches/: matrix_creation.rs
src/: errors.rs  identities.rs  lib.rs  mat.rs  math.rs  new_matrix.rs  position.rs  serialization.rs
tests/: det.rs  identities.rs  iters.rs  mat.rs  mat_ops.rs  new_matrix.rs  operations.rs  ord.rs  position.rs  readme.rs  row_col_iters.rs  serialization.rs
