[package]
name = "qmat"
authors = ["br3adina7or"]
description = "A simple library for 2-dimensional matrices."
version = "0.5.1"
edition = "2021"
repository = "https://github.com/Breadinator/qmat/"
homepage = "https://github.com/Breadinator/qmat/"
license = "Unlicense"
#license-file = "LICENSE"
readme = "README.md"
categories = ["data-structures", "mathematics", "science"]
#keywords = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
num-traits = "0.2"

[dev-dependencies]
serde_json = "1.0"
rand = "0.8"
paste = "1.0"
criterion = "0.3"

[[bench]]
name = "matrix_creation"
harness = false
